# psvr2passthrough

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  vcpkg.json
assets/: README.md
cmake/: GenerateManifest.cmake
docs/: DESIGN.md  QUAD_VIEWS.md
scripts/: install.bat  install_layer.ps1  uninstall.bat  uninstall_layer.ps1
src/config/: CMakeLists.txt  config.cpp  config.h
src/core/: CMakeLists.txt  camera_source.cpp  camera_source.h  distortion.cpp  distortion.h  fov.cpp  fov.h  frame.h  input_binding.cpp  input_binding.h  logging.cpp  logging.h  shared_memory.cpp  shared_memory.h
src/gui/: CMakeLists.txt  config_window.cpp  config_window.h  main.cpp  update_checker.cpp  update_checker.h  version.h
src/handtrack/: CMakeLists.txt  bc4_decode.h  hand_tracker.cpp  hand_tracker.h  palm_post.h
src/layer/: CMakeLists.txt  PSVR2PassthroughLayer.def  dllmain.cpp  layer_dispatch.cpp  layer_dispatch.h  layer_main.cpp  layer_session.cpp  layer_session.h
src/ml/: BespokeDetector.cpp  BespokeDetector.h  CMakeLists.txt  FrameRecorder.cpp  FrameRecorder.h  HandDetection.h
src/overlay/: CMakeLists.txt  main.cpp  overlay_app.cpp  overlay_app.h
src/overlay/manifests/: actions.json  bindings_psvr2.json  manifest.vrmanifest
src/render/: CMakeLists.txt  compositor.cpp  compositor.h  d3d_helpers.h
tools/label_studio/: LABELLING_SETUP.md  label_assist.py  label_studio_config.xml
tools/training/: train.py
