cmake_minimum_required(VERSION 3.24)
project(PSVR2PassthroughLayer LANGUAGES CXX)

if(NOT WIN32)
    message(FATAL_ERROR "This project targets Windows only (PSVR2 PC adapter is Windows-only).")
endif()

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# Statically link the MSVC runtime so the resulting DLL doesn't have unexpected
# runtime dependencies when injected into arbitrary OpenXR host processes.
set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>DLL")

# vcpkg integration ----------------------------------------------------------
if(NOT DEFINED CMAKE_TOOLCHAIN_FILE)
    message(WARNING
        "CMAKE_TOOLCHAIN_FILE is not set. Configure with "
        "-DCMAKE_TOOLCHAIN_FILE=$ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake")
endif()

# Dependencies ---------------------------------------------------------------
find_package(OpenXR CONFIG REQUIRED)        # vcpkg: openxr-loader
find_package(directxtk CONFIG REQUIRED)     # vcpkg: directxtk
find_package(fmt CONFIG REQUIRED)           # vcpkg: fmt
find_package(spdlog CONFIG REQUIRED)        # vcpkg: spdlog
find_package(imgui CONFIG REQUIRED)         # vcpkg: imgui[win32-binding,dx11-binding]

# DirectXMath ships with the Windows SDK - no find_package needed.

# Subprojects ----------------------------------------------------------------
add_subdirectory(src/config)      # shared config (used by both layer and GUI)
add_subdirectory(src/core)        # camera ingest, undistortion, shared-memory, input binding
add_subdirectory(src/render)      # D3D11 compositor used by the layer
add_subdirectory(src/layer)       # the actual OpenXR API layer DLL
add_subdirectory(src/overlay)     # standalone OpenVR overlay app (native-OpenVR games)
add_subdirectory(src/gui)         # standalone configurator executable

# Manifest generation --------------------------------------------------------
# The PSVR2PassthroughLayer.json manifest is generated by a post-build step
# defined in src/layer/CMakeLists.txt — see GenerateManifest.cmake. It MUST
# live with the target definition because add_custom_command(TARGET ...) is
# directory-scoped, and we need $<CONFIG> / $<TARGET_FILE:...> generator
# expressions that only resolve at build time.